src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Sponsor_Type__c</fullName>
        <description>CTIMGI: Captures the the relationship that the Sponsor has with the contact on the Lead. The Sponsor is responsible for paying the Student&apos;s fees for courses and qualifications.</description>
        <label>Sponsor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsor_Work_Phone__c</fullName>
        <description>CTIMGI: Captures the work phone number of the Lead Contact&apos;s Sponsor. The Sponsor is responsible for paying the Student&apos;s fees for courses and qualifications.</description>
        <label>Sponsor Work Phone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CTIMGI Identifies if the person on the Lead is an International Student. If the checkbox is not checked it the Lead is a Local Student.</description>
        <label>International Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Students__c</fullName>
        <description>CORE This is an ANZ field to record the number of students associated to a Lead.</description>
        <label>Students</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>Global/CTIMGI: Field to record the the sub type of an account for the request a new account functionality.</description>
        <label>Sub Type</label>
        <picklist>
            <controllingField>Organisation_Type1__c</controllingField>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Today_Date_field__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Today Date field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>CTIMGI: Field to capture the type for the request a new Account functionality.</description>
        <label>Type</label>
        <picklist>
            <controllingField>Organisation_Type1__c</controllingField>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occupational Skills &amp; Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Police</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense Forces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comprehensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Educational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bookstore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <description>CORE/Global: This field gives the reason that the lead has entered the Unqualified status.</description>
        <label>Unqualified Reason</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Cannot be contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need already satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No available budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No product or service match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a decision maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No credible timeframe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual leaving account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No interest in leaving competitor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>international_student__c</fullName>
        <description>CTIMGI Identifies if the person on the Lead is an International Student. If the checkbox is not checked it the Lead is a Local Student.</description>
        <label>International Student</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isLeadConvertedOpp__c</fullName>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isLeadConvertedOpp</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AU_HED_LEADS</fullName>
        <filterScope>Queue</filterScope>
        <label>AU HED LEADS</label>
        <language>en_US</language>
        <queue>AU_HED</queue>
        <sharedTo>
            <group>AU_HED_Leads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AU_Inside_Sales_leads</fullName>
        <filterScope>Queue</filterScope>
        <label>AU Inside Sales leads</label>
        <language>en_US</language>
        <queue>AU_Inside_Sales</queue>
        <sharedTo>
            <group>AU_Inside_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AU_Primary_Leads</fullName>
        <filterScope>Queue</filterScope>
        <label>AU Primary Leads</label>
        <language>en_US</language>
        <queue>AU_Primary</queue>
        <sharedTo>
            <group>AU_Primary_Leads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AU_Schools_BDM_Leads</fullName>
        <filterScope>Queue</filterScope>
        <label>AU Schools BDM Leads</label>
        <language>en_US</language>
        <queue>AU_Schools_BDM</queue>
        <sharedTo>
            <group>AU_Schools_BDM</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AU_Schools_Channel_Sales_Leads</fullName>
        <filterScope>Queue</filterScope>
        <label>AU Schools Channel Sales Leads</label>
        <language>en_US</language>
        <queue>AU_Schools_Channel_Sales</queue>
        <sharedTo>
            <group>AU_Schools_Channel_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AU_Secondary</fullName>
        <filterScope>Queue</filterScope>
        <label>AU Secondary Leads</label>
        <language>en_US</language>
        <queue>AU_Secondary</queue>
        <sharedTo>
            <group>AU_Secondary_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AU_Secondary_Leads</fullName>
        <filterScope>Queue</filterScope>
        <label>AU Secondary Leads</label>
        <language>en_US</language>
        <queue>AU_Secondary</queue>
        <sharedTo>
            <group>AU_Secondary_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CTIMGI_New_Account_Request_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>CTIMGI New Account Request</label>
        <language>en_US</language>
        <queue>CTIMGI_New_Account_Request</queue>
        <sharedTo>
            <group>CTIMGI_New_Account_request_Lead</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cape_Town_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>CTIMGI Free State Queue Leads</label>
        <language>en_US</language>
        <queue>Free_State_Queue</queue>
        <sharedTo>
            <group>CTIMGI_Free_State</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Eastern_Cape_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>CTIMGI Eastern Cape Queue Leads</label>
        <queue>Eastern_Cape_Queue</queue>
        <sharedTo>
            <group>CTIMGI_Eastern_Cape</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Free_State_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>CTIMGI Free State Queue Leads</label>
        <queue>Free_State_Queue</queue>
        <sharedTo>
            <group>CTIMGI_Free_State</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Gauteng_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>CTIMGI Gauteng Leads</label>
        <language>en_US</language>
        <queue>Gauteng</queue>
        <sharedTo>
            <group>CTIMGI_Gauten_leo</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>International_School_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>International School Leads</label>
        <queue>International_School_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KwaZulu_Natal_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>CTIMGI KwaZulu-Natal Leads</label>
        <language>en_US</language>
        <queue>KwaZulu_Natal</queue>
        <sharedTo>
            <group>CTIMGI_Kwazulu_Natal</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>B2B</fullName>
        <active>true</active>
        <businessProcess>Core Lead Process</businessProcess>
        <label>B2B</label>
    </recordTypes>
    <recordTypes>
        <fullName>Core_Lead</fullName>
        <active>true</active>
        <businessProcess>Core Lead Process</businessProcess>
        <description>Core Lead</description>
        <label>Core Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>D2L</fullName>
        <active>true</active>
        <businessProcess>Core Lead Process</businessProcess>
        <description>Leads Specific to Direct to Learner sales opportunities.</description>
        <label>D2L</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Amount_required_to_Convert</fullName>
        <active>true</active>
        <description>Core - Amount required to Convert a lead</description>
        <errorConditionFormula>AND(
 RecordType.Name=&quot;Core Lead&quot;,
OR(
Amount__c   &lt;=  0,
ISBLANK(Amount__c) 
),
IsConverted,
NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c) )</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>To convert a lead the lead &apos;Amount&apos; must be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>B2B_Lead_Phone_is_mandatory</fullName>
        <active>true</active>
        <description>Phone is mandatory for lead of type B2B, 
Phone must start with country code.</description>
        <errorConditionFormula>AND( 
TEXT($User.Market__c)=&apos;ZA&apos;, 
$RecordType.Name==&apos;B2B&apos;, 
OR(ISBlank(Phone),LEFT(Phone, 1) &lt;&gt; &quot;+&quot;), $Setup.Bypass_Settings__c.Disable_Validation_Rules__c==false)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>please enter valid Phone number alongwith the country code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>B2B_Mandatory_fields_before_Conversion</fullName>
        <active>true</active>
        <description>This validation rule has been created for B2B Lead record&apos;s conversion,for specific fields to be mandatorily populated.</description>
        <errorConditionFormula>AND(
$RecordType.Name=&quot;B2B&quot;,
OR( 
ISPICKVAL(Line_of_Business__c,&apos;&apos;),
ISPICKVAL(Geography__c,&apos;&apos;),
ISPICKVAL(Account_Currency__c,&apos;&apos;)),
IsConverted)&amp;&amp; 
NOT 
( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c)</errorConditionFormula>
        <errorMessage>Please enter the values of Geography,Line Of Business &amp; Account Currency before requesting for a lead conversion.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CTIMGI_Only_Mandatory_fields_for_Lead</fullName>
        <active>false</active>
        <description>CTIMGI Only_Mandatory fields for Lead Creation</description>
        <errorConditionFormula>AND($RecordType.Name=&quot;D2L&quot;,NOT(ISPICKVAL(LeadSource ,&apos;Online/Web&apos;)),NOT(ISPICKVAL(LeadSource ,&apos;Referrals&apos;)),ISPICKVAL(Market__c,&quot;South Africa&quot;),OR(ISBLANK( FirstName),ISBLANK(LastName),ISPICKVAL(Country_of_Origin__c,&quot;&quot;),AND(ISPICKVAL(Preferred_Contact_Method__c , &quot;Email&quot;),ISBLANK(Email)),AND(ISPICKVAL(Preferred_Contact_Method__c , &quot;Phone&quot;),ISBLANK(Phone)),AND(ISPICKVAL(Preferred_Contact_Method__c , &quot;Post&quot;),ISBLANK(Country)),AND(ISPICKVAL(Preferred_Contact_Method__c , &quot;Mobile/Cell&quot;),ISBLANK( MobilePhone)),ISBLANK(Institution_Organisation__c)))&amp;&amp; NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c &amp;&amp; $RecordType.Name!=$Label.ANZ_Record_Type  )</errorConditionFormula>
        <errorMessage>Following fields are mandatory for creation of Lead:First Name,Last Name,Country of Origin,Preferred method of communication, Either of Phone/Mobile/Email/Address and Organisations/institution</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CTIMGI_Web_to_Lead_Mandatory_fields</fullName>
        <active>false</active>
        <description>CTIMGI Only_Web to Lead - Mandatory fields for Lead Creation</description>
        <errorConditionFormula>AND($RecordType.Id=&quot;012110000004qxG&quot;,ISPICKVAL(LeadSource,&apos;Online/Web&apos;),ISPICKVAL(Market__c,&apos;South Africa&apos;),OR(ISBLANK( FirstName),ISBLANK(LastName),ISPICKVAL(Country_of_Origin__c,&quot;&quot;),AND(ISPICKVAL(Preferred_Contact_Method__c , &quot;Email&quot;),ISBLANK(Email)),AND(ISPICKVAL(Preferred_Contact_Method__c , &quot;Phone&quot;),ISBLANK(Phone)),AND(ISPICKVAL(Preferred_Contact_Method__c , &quot;Post&quot;),ISBLANK(Country)),AND(ISPICKVAL(Preferred_Contact_Method__c , &quot;Mobile/Cell&quot;),ISBLANK( MobilePhone)),ISBLANK(Institution_organisation_if_Other__c)))</errorConditionFormula>
        <errorMessage>Following fields are mandatory for creation of Lead:First Name,Last Name,Country of Origin,Preferred method of communication, Either of Phone/Mobile/Email/Address and Organisations/institution(If Other)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>D2L_Country_of_origin_field_Required</fullName>
        <active>true</active>
        <description>Country of origin field is required in D2L record type</description>
        <errorConditionFormula>AND($RecordType.Name=&quot;D2L&quot;, ISBLANK(TEXT(Country_of_Origin__c)))&amp;&amp; NOT($Setup.Bypass_Settings__c.Disable_Validation_Rules__c)</errorConditionFormula>
        <errorDisplayField>Country_of_Origin__c</errorDisplayField>
        <errorMessage>Please select value for country of origin field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>D2L_Lead_source_field_readonly</fullName>
        <active>true</active>
        <description>once a lead is created with the lead source we need to make it readonly.</description>
        <errorConditionFormula>AND($RecordType.Name=&quot;D2L&quot;, 
ISCHANGED( LeadSource ))&amp;&amp; NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c )</errorConditionFormula>
        <errorDisplayField>LeadSource</errorDisplayField>
        <errorMessage>Cannot edit the Lead source field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>D2L_Preferred_Contact_method_Email</fullName>
        <active>true</active>
        <description>If Preferred Contact method. Is Phone – Phone is required to create the lead</description>
        <errorConditionFormula>AND($RecordType.Name=&quot;D2L&quot;,IF(ISPICKVAL( Preferred_Contact_Method__c , &apos;Email&apos;),ISBLANK(Email),false))
&amp;&amp; NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c)</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Please enter value in a Email field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>D2L_Preferred_Contact_method_Fax</fullName>
        <active>true</active>
        <description>If Preferred Contact method Is Fax – Fax is required to create the lead</description>
        <errorConditionFormula>AND($RecordType.Name=&quot;D2L&quot;,IF(ISPICKVAL( Preferred_Contact_Method__c , &apos;Fax&apos;),ISBLANK(Fax),false))
 &amp;&amp; NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c)</errorConditionFormula>
        <errorDisplayField>Fax</errorDisplayField>
        <errorMessage>Please enter value in the Fax field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>D2L_Preferred_Contact_method_Mail</fullName>
        <active>true</active>
        <description>If Preferred Contact method. Is Mail – Address is required to create the lead</description>
        <errorConditionFormula>AND($RecordType.Name=&quot;D2L&quot;, ISPICKVAL( Preferred_Contact_Method__c , &apos;Mail&apos;), OR(ISBLANK(Street), ISBLANK(City), ISBLANK(TEXT(CountryCode)), ISBLANK( PostalCode)))
&amp;&amp; NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c &amp;&amp; $RecordType.Name!=$Label.ANZ_Record_Type  )</errorConditionFormula>
        <errorMessage>Please enter complete address information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>D2L_Preferred_Contact_method_Mobile</fullName>
        <active>true</active>
        <description>If Preferred Contact method. Is Mobile\Cell– Mobile\Cell is required to create the lead</description>
        <errorConditionFormula>AND($RecordType.Name=&quot;D2L&quot;,IF(ISPICKVAL( Preferred_Contact_Method__c , &apos;Mobile/Cell&apos;),ISBLANK(MobilePhone),false))&amp;&amp; NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c)</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Please enter value in a Mobile field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>D2L_Preferred_Contact_method_Phone</fullName>
        <active>true</active>
        <description>If Preferred Contact method. Is Phone – Phone is required to create the lead</description>
        <errorConditionFormula>AND($RecordType.Name=&quot;D2L&quot;,IF(ISPICKVAL( Preferred_Contact_Method__c , &apos;Phone&apos;),AND(ISBLANK( Phone), ISBLANK( Home_Phone__c)) ,false))
&amp;&amp; NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c)</errorConditionFormula>
        <errorMessage>Please enter Phone or Home phone field value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>D2L_Sponsor_Type_Self_or_Null</fullName>
        <active>true</active>
        <description>validation rule should not apply if the sponsor type is &apos;self&apos; or blank</description>
        <errorConditionFormula>AND(IsConverted, $RecordType.Name=&quot;D2L&quot;,NOT (or(ISPICKVAL(Sponsor_Type__c, &apos;Self&apos;), ISPICKVAL(Sponsor_Type__c,&apos;&apos;))), OR(ISBLANK(Sponsor_Sponsor__c),ISBLANK(Sponsor_Name__c), ISPICKVAL(Sponsor_Preferred_Method_of_Contact__c,&apos;&apos;) ,AND(ISPICKVAL(Sponsor_Preferred_Method_of_Contact__c , &quot;Email&quot;),ISBLANK(Sponsor_Email__c)),AND(ISPICKVAL(Sponsor_Preferred_Method_of_Contact__c , &quot;Phone&quot;),AND(ISBLANK(Sponsor_Phone__c),ISBLANK( Sponsor_Home_Phone__c),ISBLANK( Sponsor_Mobile__c ))),AND(ISPICKVAL(Sponsor_Preferred_Method_of_Contact__c, &quot;Postal&quot;),ISPICKVAL(Sponsor_Address_Country__c,&apos;&apos;))))&amp;&amp; NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c)</errorConditionFormula>
        <errorMessage>Please enter the Sponsor Details ( Sponsors Name, Preferred Method Of Communication and the Method Of Communication need to be provided.)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>D2L_institution_organization_validation</fullName>
        <active>true</active>
        <description>Institution/organisation is required to create a lead record if the lead source is not Online/website</description>
        <errorConditionFormula>AND($RecordType.Name=&quot;D2L&quot;,IF(NOT(ISPICKVAL(  LeadSource , &apos;Online/Web&apos;)),ISBLANK( Institution_Organisation__c ),false)) &amp;&amp; NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c)</errorConditionFormula>
        <errorDisplayField>Institution_Organisation__c</errorDisplayField>
        <errorMessage>Please select value for Institution/Organization field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>D2L_lead_conversion_mandatory_Email</fullName>
        <active>false</active>
        <description>validation rule for D2L record types only, that the email address or Phone or Mobile  and City or  ZIP code need to be provided on the Lead before it can be converted</description>
        <errorConditionFormula>AND( 
IsConverted, $RecordType.Name=&quot;D2L&quot;,AND(ISBLANK(  Phone),ISBLANK( Home_Phone__c ),ISBLANK( MobilePhone), ISBLANK(Email)))&amp;&amp; NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c &amp;&amp; $RecordType.Name!=$Label.ANZ_Record_Type )</errorConditionFormula>
        <errorMessage>Please provide a City or Zip/Postal code and an Email, Phone or Mobile number to convert a lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>D2L_lead_conversion_mandatory_fields</fullName>
        <active>true</active>
        <description>validation rule for D2L record types only, that the email address or Phone or Mobile and City or ZIP code need to be provided on the Lead before it can be converted</description>
        <errorConditionFormula>AND(
IsConverted, $RecordType.Name=&quot;D2L&quot;,AND(ISBLANK( City),ISBLANK( PostalCode ))||(AND(
ISBLANK(  Phone), ISBLANK( Home_Phone__c ), ISBLANK( MobilePhone), ISBLANK(Email)
))  &amp;&amp; NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c))</errorConditionFormula>
        <errorMessage>Please provide a City or Zip/Postal code and an Email, Phone or Mobile number to convert a lead</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>First_Language_cannot_be_blank</fullName>
        <active>true</active>
        <description>First Language cannot be blank</description>
        <errorConditionFormula>AND(
$RecordType.Name=&quot;D2L&quot;,
ISPICKVAL(First_Language__c, &quot;Other&quot;),
ISBLANK(Other_Language__c))
&amp;&amp; NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c)</errorConditionFormula>
        <errorDisplayField>Other_Language__c</errorDisplayField>
        <errorMessage>You must specify a First Language</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Global_International_Student</fullName>
        <active>true</active>
        <description>Global Determine if the Student is international or not.</description>
        <errorConditionFormula>AND(IsConverted, $RecordType.Name=&quot;D2L&quot;,ISPICKVAL(international_student__c, &apos;&apos;), NOT 
( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c))</errorConditionFormula>
        <errorMessage>Please, indicate if the student is a international student or not.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Global_Interview_Date_Time_Must</fullName>
        <active>true</active>
        <description>Global_Interview Date/Time must be recorded in order to convert a Lead</description>
        <errorConditionFormula>AND(IsConverted, $RecordType.Name=&quot;D2L&quot;, Interview_Attendance__c!=True)
&amp;&amp; NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c)</errorConditionFormula>
        <errorDisplayField>Interview_Attendance__c</errorDisplayField>
        <errorMessage>The Learner must have attended an interview to be converted from a Lead to an Opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Global_Sponsor_Mandatory_fields</fullName>
        <active>true</active>
        <description>Global Sponsor Mandatory fields On Lead</description>
        <errorConditionFormula>AND(IsConverted, $RecordType.Name=&quot;D2L&quot;,NOT(or(ISPICKVAL(Sponsor_Type__c, &apos;Self&apos;), ISPICKVAL(Sponsor_Type__c,&apos;&apos;))),OR(ISBLANK(Sponsor_Sponsor__c),ISBLANK(Sponsor_Name__c),AND(ISPICKVAL(Preferred_Contact_Method__c , &quot;Email&quot;),ISBLANK(Email)),AND(ISPICKVAL(Preferred_Contact_Method__c , &quot;Phone&quot;),ISBLANK(Phone)),AND(ISPICKVAL(Preferred_Contact_Method__c , &quot;Post&quot;),ISBLANK(Country)),AND(ISPICKVAL(Preferred_Contact_Method__c , &quot;Mobile/Cell&quot;),ISBLANK( MobilePhone)))) 
&amp;&amp; NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c)</errorConditionFormula>
        <errorMessage>The following fields must be populated: Sponsor First and Last name, Preferred Method of Communication and either of Phone,Mobile or Address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Contact_Phone_Email_or_Mobile</fullName>
        <active>true</active>
        <description>Core: Users must input at least one of Phone, Email or Mobile</description>
        <errorConditionFormula>AND(ISBLANK(Phone),AND(ISBLANK(Email),ISBLANK(MobilePhone)), NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c))</errorConditionFormula>
        <errorMessage>Please provide at least one of Phone, Email or Mobile contact details for this lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Country_and_State_required</fullName>
        <active>false</active>
        <description>Country and State must be populated</description>
        <errorConditionFormula>OR(ISBLANK(Country),AND(Country==&quot;Australia&quot;,ISBLANK(State)))</errorConditionFormula>
        <errorMessage>Country and State must be populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Fax_Validation_Rule</fullName>
        <active>true</active>
        <description>A validation rule to ensure that only certain characters are allowed to be populated in the Fax field.</description>
        <errorConditionFormula>AND(OR($RecordType.Name=&apos;D2L&apos;,$RecordType.Name=&apos;B2B&apos;),IF( 
ISBLANK( Fax ) , false ,NOT(REGEX( Fax , &quot;[0-9+\\-\\(\\)\\&apos; &apos;]*&quot;))))
&amp;&amp; 
NOT 
( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c)</errorConditionFormula>
        <errorMessage>Please enter a valid fax number containing only these characters: 0-9, +, -, ()</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Source_validate</fullName>
        <active>true</active>
        <description>•If a value of &apos;Other&apos; is selected in Lead Source, then the user must record information in the &apos;Other Lead Source&apos; text field</description>
        <errorConditionFormula>IF($RecordType.Name=&quot;D2L&quot; &amp;&amp; ISPICKVAL(LeadSource, &apos;Other&apos;) ,  ISBLANK( Other_Lead_Source__c ),false)
&amp;&amp; NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c)</errorConditionFormula>
        <errorDisplayField>Other_Lead_Source__c</errorDisplayField>
        <errorMessage>Please enter value in other lead source</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Leads_Phone_number_validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR($RecordType.Name=&apos;D2L&apos;,$RecordType.Name=&apos;B2B&apos;),if(ISBLANK(MobilePhone) ,false ,NOT(REGEX(MobilePhone, &quot;[0-9+\\-\\(\\)]*&quot;))) 
||
if(ISBLANK(Phone) ,false ,NOT(REGEX(Phone, &quot;[0-9+\\-\\(\\)]*&quot;))) 
||
if(ISBLANK(Home_Phone__c) ,false ,NOT(REGEX(Home_Phone__c, &quot;[0-9+\\-\\(\\)]*&quot;))) 
||
if(ISBLANK(Other_Phone__c) ,false ,NOT(REGEX(Other_Phone__c, &quot;[0-9+\\-\\(\\)]*&quot;))) 
||
if(ISBLANK(Sponsor_Home_Phone__c) ,false ,NOT(REGEX(Sponsor_Home_Phone__c, &quot;[0-9+\\-\\(\\)]*&quot;))) 
||
if(ISBLANK(Sponsor_Phone__c) ,false ,NOT(REGEX(Sponsor_Phone__c, &quot;[0-9+\\-\\(\\)]*&quot;))))
&amp;&amp; 
NOT 
( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c)</errorConditionFormula>
        <errorMessage>Please enter a valid phone number for all the phone fields containing only these characters: 0-9, +, -, ()</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Lead_Source</fullName>
        <active>false</active>
        <description>If lead source = other then the &apos;Other Lead Source&apos; field must be populated</description>
        <errorConditionFormula>ISPICKVAL(LeadSource , &quot;Other&quot;) 
&amp;&amp; ISBLANK( Other_Lead_Source__c )</errorConditionFormula>
        <errorDisplayField>Other_Lead_Source__c</errorDisplayField>
        <errorMessage>Please define the other lead source.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Populate_Unqualified_Reason</fullName>
        <active>true</active>
        <description>Required  &apos;Unqualified Reason&apos; when Staus Unqualified</description>
        <errorConditionFormula>AND($RecordType.Name=&quot;D2L&quot;,
ISPICKVAL(Status, &quot;Unqualified&quot;),
ISPICKVAL(Unqualified_Reason__c, &quot;&quot;),
NOT($Setup.Bypass_Settings__c.Disable_Validation_Rules__c))</errorConditionFormula>
        <errorMessage>Please populate &apos;Unqualified Reason&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Preferred_Campus_Mandatory</fullName>
        <active>true</active>
        <description>Require preferred campus when lead is converting</description>
        <errorConditionFormula>AND(IsConverted,$RecordType.Name=&quot;D2L&quot;) &amp;&amp; ISBLANK(TEXT(Preferred_Campus__c ))
 &amp;&amp; NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c)</errorConditionFormula>
        <errorMessage>The preferred campus is required to convert the Lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Preferred_campus_validation</fullName>
        <active>true</active>
        <description>Require preferred campus when organisation Unknown School</description>
        <errorConditionFormula>AND($RecordType.Name=&quot;D2L&quot;, ISPICKVAL( LeadSource , &apos;Walk-In&apos;), Institution_Organisation__r.Name=&quot;Unknown School&quot;) &amp;&amp;  ISBLANK(TEXT(Preferred_Campus__c ))
&amp;&amp; NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c)</errorConditionFormula>
        <errorDisplayField>Preferred_Campus__c</errorDisplayField>
        <errorMessage>Please select a preferred campus when the School is Unknown</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sponsor_Details_Validation</fullName>
        <active>true</active>
        <description>Sponsor Type field is required while converting a lead</description>
        <errorConditionFormula>AND(IsConverted, $RecordType.Name=&quot;D2L&quot;, (ISPICKVAL( Sponsor_Type__c , &apos;&apos;)))
&amp;&amp; NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c)</errorConditionFormula>
        <errorMessage>Please Select the Sponsor Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>The_School_on_the_Lead_requires_Province</fullName>
        <active>true</active>
        <description>For South Africa D2L leads a user can not save the lead unless the school they are associating to the lead in the Institution/organisation field has a Province in the Shipping Address.</description>
        <errorConditionFormula>AND(
RecordType.Name=&quot;D2L&quot;, 
ISPICKVAL(Market__c,&quot;ZA&quot;),  
Not(ISPICKVAL( LeadSource,&quot;Online/Web&quot;)), Institution_Organisation__r.ShippingState =&quot;&quot;, 
NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c)
)</errorConditionFormula>
        <errorMessage>The School associated to Lead in the Institution/organisation field needs to have a a Province in the Shipping Address.</errorMessage>
    </validationRules>
</CustomObject>